--- a/assets/style.css
+++ b/assets/style.css
@@ -2,9 +2,27 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     line-height: 1;
-    background-color: rgba(0, 0, 0, 0.597);
-    color:white;
   }
 
+.main-section {
+  /* background-color: rgba(0, 0, 0, 0.597); */
+  color:white;
+  background-color: rgba(0, 0, 0, 0.895);
+  position:absolute;
+  top:0px;
+  right:0px;
+  bottom:0px;
+  left:0px;
+}
 
+.big-box {
+
+  background-color: rgb(94, 94, 94);
+  width: 600px;
+  height: 400px;
+  border-radius: 10px;
+  margin-top: 100px;
+  margin-left: auto;
+  margin-right: auto;
+}
 
