--- a/assets/style.css
+++ b/assets/style.css
@@ -4,24 +4,44 @@ body {
     line-height: 1;
   }
 
-.main-section {
+.background-section {
+  /* display: flex; */
   color:white;
-  background-color: rgba(0, 0, 0, 0.85);
+  background-color: rgba(0, 0, 0, 0.90);
   position:absolute;
   top:0px;
   right:0px;
   bottom:0px;
   left:0px;
+  margin: auto;
+  /* align-items: center; */
+  /* opacity: .3; */
+}
+
+.main-section {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .big-box {
-
-  background-color: rgb(94, 94, 94);
+  display: flex;
+  /* background-color: rgb(94, 94, 94); */
+  background: #333333;
   width: 600px;
   height: 400px;
   border-radius: 10px;
   margin-top: 100px;
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-left: auto;
+  margin-right: auto; */
+  flex-direction: column;
+  align-items: center;
 }
 
+#cover {
+  width: 180px;
+  height: 180px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 25px rgb(0 0 0 / 35%);
+  margin-top: -40px;
+}
