change with text

--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@ body {
 .background-section {
   /* display: flex; */
   color:white;
-  background-color: rgba(0, 0, 0, 0.90);
+  background-color: rgba(0, 0, 0, 0.826);
   position:absolute;
   top:0px;
   right:0px;
@@ -28,12 +28,10 @@ body {
   display: flex;
   /* background-color: rgb(94, 94, 94); */
   background: #333333;
-  width: 600px;
-  height: 400px;
-  border-radius: 10px;
-  margin-top: 100px;
-  /* margin-left: auto;
-  margin-right: auto; */
+  width: 620px;
+  height: 475px;
+  border-radius: 20px;
+  margin-top: 140px;
   flex-direction: column;
   align-items: center;
   text-align: center;
@@ -45,4 +43,14 @@ body {
   border-radius: 10px;
   box-shadow: 0px 0px 25px rgb(0 0 0 / 35%);
   margin-top: -40px;
+}
+
+#band {
+  margin-top: 15px;
+  font-size: 33px;
+  font-weight: bold;
+}
+
+#city {
+  color:rgba(228, 223, 223, 0.658)
 }
