--- a/assets/style.css
+++ b/assets/style.css
@@ -9,10 +9,12 @@ body {
   color:white;
   background-color: rgba(0, 0, 0, 0.877);
   position:absolute;
-  top:0px;
+  width: 100%;
+  height: 100%;
+  /* top:0px;
   right:0px;
   bottom:0px;
-  left:0px;
+  left:0px; */
   margin: auto;
   /* align-items: center; */
   /* opacity: .3; */
@@ -76,7 +78,8 @@ body {
   height: 70px;
   background-color: #333333;
   border-radius: 20px;
-  text-align: center;
+  /* text-align: center; */
+  vertical-align: center;
 }
 
 .music-logo {
@@ -90,7 +93,18 @@ body {
   border-bottom-left-radius: 20px;
 }
 
-/* .music-div {
-  width: 100%;
-  text-align: center; 
-}*/
+.music-link {
+  display: flex;
+  height: 100%;
+  width: 78%;
+  align-items: center;
+  padding-left: 30px;
+}
+
+.arrow {
+  display: flex;
+  height: 100%;
+  width: 11%;
+  align-items: center;
+  justify-content: center;
+}
